-fixed navbar on mobile

--- a/wbs-alarm/wbs-frontend/src/app/views/system/system.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/system.component.scss
@@ -21,11 +21,16 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 64px;
+    top: 61px;
     bottom: 0;
     left: 0;
     right: 0;
 }
+
+.big-top
+{
+    top: 255px !important;
+ }
 
 .example-is-mobile .example-toolbar {
     position: fixed;
